modules/deployments/n8n/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: n8n-stripprefix
  namespace: ${namespace}
spec:
  stripPrefix:
    prefixes:
      - /n8n
