modules/deployments/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: ${namespace}
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ${namespace}-n8n-stripprefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /n8n
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
